bug : button on not the same width as off bug  : language not showing in settings

--- a/web/static/css/host-page.css
+++ b/web/static/css/host-page.css
@@ -144,7 +144,6 @@ nav button img{
 /* ON */
 .nav_content button.on{
     background: #49cf38;
-    padding: 0;
 }
 .nav_content button.on:hover{
     background: #47c037;
